# oellm-eval

./: .gitignore  README.md  pyproject.toml  requirements-venv.txt
.github/workflows/: ci.yml
docs/: FLORES200_DEBUG.md  TASKS.md  VENV.md
oellm/: main.py  results.py  task_groups.py
oellm/resources/: clusters.yaml  primary-metrics.yaml  task-groups.yaml  template.sbatch
oellm/resources/custom_lm_eval_tasks/belebele_trans/: _default_template_yaml  belebele_ces_Latn_trans__eng_Latn__EuroLLM-1.7B.yaml  ces_Latn-eng_Latn.json
oellm/resources/custom_lm_eval_tasks/global_mgsm/: _default_template_yaml  global_mgsm_ca.yaml  global_mgsm_cs.yaml  global_mgsm_de.yaml  global_mgsm_el.yaml  global_mgsm_en.yaml  global_mgsm_es.yaml  global_mgsm_eu.yaml  global_mgsm_fr.yaml  global_mgsm_gl.yaml  global_mgsm_hu.yaml  global_mgsm_sr.yaml
oellm/resources/custom_lm_eval_tasks/polymath/: utils.py
patches/: lighteval-translation-language-names.patch
scripts/: apply_lighteval_patches.sh  inspect_details.py  pivot_results.py  tag_languages.py
tests/: conftest.py  test_collect_results.py  test_language_groups.py  test_schedule_evals.py  test_task_groups.py
tests/integration/: test_slurm.py
